--- a/professor/professor.html
+++ b/professor/professor.html
@@ -22,7 +22,7 @@
           <li class="active" data-section="dashboard" > <i class='bx  bx-home'  ></i> Dashboard</li> 
           <li data-section="calendario"><i class='bx bx-calendar'></i> Calendário</li>
           <li data-section="boletins"><i class='bx bx-file'></i> Boletins</li>
-          <li data-section="medias"><i class='bx bx-calculator'></i> Médias & Frequência</li>
+          <li data-section="calculo"><i class='bx bx-calculator'></i> Médias & Frequência</li>
         </ul>
       </nav>
       <div class="theme-toggle">
@@ -47,7 +47,7 @@
 
       <!-- CALENDÁRIO -->
       <section id="calendario">
-        <h1>Calendário Escolar</h1>
+        <h1><i class='bx bx-calendar'></i> Calendário Escolar</h1>
         <div class="calendar-container">
           <div class="calendar-header">
             <button id="prevYear">&laquo;</button>
@@ -130,10 +130,71 @@
 
 
       <!-- MÉDIAS E FREQUÊNCIA -->
-      <section id="medias">
-        <h1>Cálculo de Médias e Frequência</h1>
-        
+      <section id="calculo" >
+        <h1><i class='bx bx-calculator'></i> Cálculo de Média e Frequência</h1>
+
+        <div class="calculo-container">
+          <!-- Coluna da esquerda -->
+          <div class="input-area">
+            <h2>Lançar Notas e Faltas</h2>
+            <div class="form-group">
+              <label>Nome do Aluno:</label>
+              <input type="text" id="nomeAluno" placeholder="Ex: Luccas Gonçalves">
+            </div>
+
+            <div class="form-group">
+              <label>Disciplina:</label>
+              <input type="text" id="disciplina" placeholder="Ex: Programação Web">
+            </div>
+
+            <div class="form-row">
+              <div class="form-group">
+                <label>Nota 1:</label>
+                <input type="number" id="nota1" min="0" max="10" step="0.1">
+              </div>
+              <div class="form-group">
+                <label>Nota 2:</label>
+                <input type="number" id="nota2" min="0" max="10" step="0.1">
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group">
+                <label>Faltas:</label>
+                <input type="number" id="faltas" min="0">
+              </div>
+              <div class="form-group">
+                <label>Total de Aulas:</label>
+                <input type="number" id="totalAulas" min="1">
+              </div>
+            </div>
+
+            <button id="calcularBtn" class="btn-calc">Calcular Resultado</button>
+          </div>
+
+          <!-- Coluna da direita -->
+          <div class="resultado-area">
+            <h2>Resultado Final</h2>
+
+            <div class="resultado-card">
+              <h3>Média Final</h3>
+              <p id="mediaFinal">–</p>
+            </div>
+
+            <div class="resultado-card">
+              <h3>Frequência</h3>
+              
+              <p id="frequenciaTexto">–</p>
+            </div>
+
+            <div class="resultado-card status">
+              <h3>Status</h3>
+              <p id="statusAluno">–</p>
+            </div>
+          </div>
+        </div>
       </section>
+
     </main>
   </div>
 
