fix: ajustando formulario de cadastro de usuario

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -150,9 +150,9 @@
                   <input type="text" id="curso" placeholder="Ex: Desenvolvimento Web" required>
                 </div>
 
-                <!-- Matrícula (somente para aluno) -->
-                <div class="form-group hidden" id="matriculaGroup">
-                  <label for="matricula">Matrícula</label>
+                <!-- Matrícula -->
+                <div class="form-group ">
+                  <label for="matricula">RM</label>
                   <input type="text" id="matricula" placeholder="Ex: 20250123">
                 </div>
               </div>
