fix: forms de cadastro

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -145,7 +145,7 @@
                 </div>
 
                 <!-- Curso / Matéria -->
-                <div class="form-group">
+                <div class="form-group" id ="materiaGroup">
                   <label for="curso">Curso / Matéria</label>
                   <input type="text" id="curso" placeholder="Ex: Desenvolvimento Web" required>
                 </div>
