modal de matricula realizada

--- a/frontend/matricula/index.html
+++ b/frontend/matricula/index.html
@@ -50,9 +50,18 @@
   </div>
 </div>
 
-<!-- ========================================================== -->
-<!-- =============== AQUI COMEÇA O NOVO WIZARD ================ -->
-<!-- ========================================================== -->
+<div id="modalSucesso" class="modal" role="dialog" aria-modal="true" aria-labelledby="modalSucessoTitle" aria-describedby="modalSucessoDesc">
+  <div class="modal-content">
+    <h2 id="modalSucessoTitle">Matrícula concluída! </h2>
+    <p id="modalSucessoDesc">Sua matrícula foi enviada com sucesso. Aguarde as informações no seu e-mail.</p>
+
+    <button id="btnFecharModal" class="btn-modal">Fechar</button>
+  </div>
+</div>
+
+
+<!-- =============== Etapas matriculas ================ -->
+
 
 <section id="matricula" class="form-section">
   <h2>Matrícula</h2>
