implementando tratação de erros

--- a/frontend/matricula/index.html
+++ b/frontend/matricula/index.html
@@ -60,6 +60,15 @@
 </div>
 
 
+<div id="modalErro" class="modal-erro">
+  <div class="modal-conteudo">
+    <span class="modal-fechar" onclick="fecharModalErro()">&times;</span>
+    <h2>Erro</h2>
+    <p id="modalErroMensagem"></p>
+    <button onclick="fecharModalErro()" class="btn-fechar">Fechar</button>
+  </div>
+</div>
+
 <!-- =============== Etapas matriculas ================ -->
 
 
