--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -29,7 +29,7 @@
         <nav>
           <ul>
             <li class="active" data-section="dashboard" > <i class='bx  bx-home'  ></i> Dashboard</li> 
-            <li data-section="cadastro"> <i class='bx  bx-file'  ></i>  Cadastro</li>
+            <li data-section="gerenciarMatriculas"> <i class='bx  bx-file'  ></i>  Solicitações</li>
             <li data-section="listagem"> <i class='bx  bx-list-ul'  ></i>  Usuários</li>
             <li data-section="cursos"> <i class='bx  bx-list-plus'  ></i>  Cursos</li>
             <li data-section="turmas-cursos"> <i class='bx  bx-group'  ></i>   Turmas</li>
@@ -105,62 +105,17 @@
           
         </section>
 
-        <section id="cadastro">
-          <div class="cadastro-container">
-            <h2><i class='bx  bx-file'  ></i> Cadastro de Usuário</h2>
-            <p>Preencha as informações abaixo para cadastrar um novo aluno ou professor.</p>
+        <section id="gerenciarMatriculas">
+          <div class="matriculas-container">
+            <h2><i class='bx bx-user-check'></i> Solicitações de Matrícula Pendentes</h2>
+            <p>Gerencie as matrículas que estão aguardando aprovação.</p>
 
-            <form id="cadastroForm" autocomplete="off">
-              <div class="form-grid">
-
-                <!-- Tipo -->
-                <div class="form-group">
-                  <label for="tipo">Tipo de Usuário</label>
-                  <select id="tipo" required>
-                    <option value="" disabled selected>Selecione...</option>
-                    <option value="aluno">Aluno</option>
-                    <option value="professor">Professor</option>
-                  </select>
-                </div>
-
-                <!-- Nome -->
-                <div class="form-group">
-                  <label for="nome">Nome</label>
-                  <input type="text" id="nome" placeholder="Digite o nome completo" required>
-                </div>
-
-                <!-- Email -->
-                <div class="form-group">
-                  <label for="email">E-mail</label>
-                  <input type="email" id="email" placeholder="exemplo@tivit.com" required>
-                </div>
-
-                <!-- Senha -->
-                <div class="form-group senha-group">
-                  <label for="senha">Senha</label>
-                  <div class="senha-wrapper">
-                    <input type="password" id="senha" placeholder="Crie uma senha" required>
-                    <i class='bx bx-hide toggle-senha' id="toggleSenha"></i>
-                  </div>
-                </div>
-
-                <!-- Curso / Matéria -->
-                <div class="form-group" id ="materiaGroup">
-                  <label for="curso">Curso / Matéria</label>
-                  <input type="text" id="curso" placeholder="Ex: Desenvolvimento Web" required>
-                </div>
-
-                <!-- Matrícula -->
-                <div class="form-group ">
-                  <label for="matricula">RM</label>
-                  <input type="text" id="matricula" placeholder="Ex: 20250123">
-                </div>
-              </div>
-
-              <button type="submit" class="btn">Cadastrar</button>
-            </form>
+            <div id="listaMatriculas" class="matriculas-grid">
+              <!-- Os cards serão inseridos dinamicamente via JS -->
+            </div>
           </div>
         </section>
+
 
 
 
