integrando Materias com frontend e backend

--- a/frontend/aluno/aluno.html
+++ b/frontend/aluno/aluno.html
@@ -170,32 +170,13 @@
             <h2 class="titulo-materias"><i class='bx  bx-book'  ></i> Matérias</h2>
             <p class="subtitulo-materias">Clique em uma matéria para ver os conteúdos disponíveis</p>
 
-            <div class="materias-cards">
-            <div class="materia" data-materia="matematica">
-                <i class="bx bxs-calculator"></i>
-                <h3>Matemática</h3>
-            </div>
+            <div class="materias-cards" id="materiasCards"></div>
 
-            <div class="materia" data-materia="programacao">
-                <i class="bx bx-code-alt"></i>
-                <h3>Programação Web</h3>
-            </div>
-
-            <div class="materia" data-materia="banco">
-                <i class="bx bxs-data"></i>
-                <h3>Banco de Dados</h3>
-            </div>
-
-            <div class="materia" data-materia="ia">
-                <i class="bx bxs-brain"></i>
-                <h3>Inteligência Artificial</h3>
-            </div>
-            </div>
         </div>
 
         <!-- === LISTA DE CONTEÚDOS === -->
         <div class="materia-detalhes hidden" id="materiaDetalhes">
-            <button id="voltarMaterias" class="btn-voltar">← Voltar</button>
+            <button id="voltarMaterias" class="btn-voltar">Voltar</button>
             <h2 id="tituloMateria" class="titulo-detalhe"></h2>
 
             <ul id="listaArquivos" class="lista-arquivos"></ul>
