adicionando endpoints para calcular presença

--- a/frontend/professor/professor.html
+++ b/frontend/professor/professor.html
@@ -31,6 +31,8 @@
           <li data-section="calendario"><i class='bx bx-calendar'></i> Calendário</li>
           <li data-section="boletins"><i class='bx bx-file'></i> Boletins</li>
           <li data-section="calculo"><i class='bx bx-calculator'></i> Médias & Frequência</li>
+          <li data-section="chamada"><i class='bx  bx-phone'></i>  Chamada</li>
+          <li data-section="conteudo"><i class='bx  bx-book-content'></i> Conteúdo</li>
           <br>
           <a href="../index.html" class="return-btn" title="Voltar para o início">
               <i class='bx bx-undo'></i>
