--- a/frontend/professor/professor.html
+++ b/frontend/professor/professor.html
@@ -184,70 +184,59 @@
 
 
       <!-- MÉDIAS E FREQUÊNCIA -->
-      <section id="calculo" >
-        <h1><i class='bx bx-calculator'></i> Cálculo de Média e Frequência</h1>
+      <section id="calculo">
+      <h1><i class='bx bx-calculator'></i> Cálculo de Média e Frequência</h1>
 
-        <div class="calculo-container">
-          <!-- Coluna da esquerda -->
-          <div class="input-area">
-            <h2>Lançar Notas e Faltas</h2>
-            <div class="form-group">
-              <label>Nome do Aluno:</label>
-              <input type="text" id="nomeAluno" placeholder="Ex: Luccas Gonçalves">
-            </div>
+      <div class="calculo-container">
 
-            <div class="form-group">
-              <label>Disciplina:</label>
-              <input type="text" id="disciplina" placeholder="Ex: Programação Web">
-            </div>
-
-            <div class="form-row">
-              <div class="form-group">
-                <label>Nota 1:</label>
-                <input type="number" id="nota1" min="0" max="10" step="0.1">
-              </div>
-              <div class="form-group">
-                <label>Nota 2:</label>
-                <input type="number" id="nota2" min="0" max="10" step="0.1">
-              </div>
-            </div>
-
-            <div class="form-row">
-              <div class="form-group">
-                <label>Faltas:</label>
-                <input type="number" id="faltas" min="0">
-              </div>
-              <div class="form-group">
-                <label>Total de Aulas:</label>
-                <input type="number" id="totalAulas" min="1">
-              </div>
-            </div>
-
-            <button id="calcularBtn" class="btn-calc">Calcular Resultado</button>
-          </div>
-
-          <!-- Coluna da direita -->
-          <div class="resultado-area">
-            <h2>Resultado Final</h2>
-
-            <div class="resultado-card">
-              <h3>Média Final</h3>
-              <p id="mediaFinal">–</p>
-            </div>
-
-            <div class="resultado-card">
-              <h3>Frequência</h3>
-              
-              <p id="frequenciaTexto">–</p>
-            </div>
-
-            <div class="resultado-card status">
-              <h3>Status</h3>
-              <p id="statusAluno">–</p>
-            </div>
-          </div>
+        <!-- Seleção de curso -->
+        <div class="select-curso">
+          <label for="selectCurso">Selecione o curso</label>
+          <select id="selectCurso">
+            <option value="">-- Selecione um curso --</option>
+          </select>
         </div>
-      </section>
+
+        <!-- Lista de alunos -->
+        <div id="alunosContainer" class="alunos-lista hidden">
+          <!-- cards de alunos via JS -->
+        </div>
+
+        <!-- Formulário de nota -->
+        <div id="formNota" class="form-nota hidden">
+          <h2>Lançar Nota</h2>
+
+          <input type="hidden" id="alunoId">
+
+          <div class="grid">
+            <div>
+              <label>Matéria</label>
+              <select id="materiaSelect"></select>
+            </div>
+
+            <div>
+              <label>Qtd. Faltas</label>
+              <input type="number" id="qtdFaltas">
+            </div>
+
+            <div>
+              <label>Nota 1</label>
+              <input type="number" id="nota1" step="0.1">
+            </div>
+
+            <div>
+              <label>Nota 2</label>
+              <input type="number" id="nota2" step="0.1">
+            </div>
+          </div>
+
+          <button class="btn-salvar" id="btnSalvarNota">Salvar Nota</button>
+        </div>
+
+      </div>
+    </section>
+
+
 
     </main>
   </div>
