implementando fluxo de conteudo

--- a/frontend/aluno/aluno.html
+++ b/frontend/aluno/aluno.html
@@ -134,19 +134,19 @@
         <div class="desempenho-cards">
             <div class="card">
             <h3>Média Geral</h3>
-            <div class="valor destaque" id="mediaGeral">8.4</div>
+            <div class="valor destaque" id="mediaGeral"></div>
             </div>
             <div class="card">
             <h3>Melhor Curso</h3>
-            <div class="valor" id="melhorCurso">Desenvolvimento Web</div>
+            <div class="valor" id="melhorCurso"></div>
             </div>
             <div class="card">
             <h3>Frequência</h3>
-            <div class="valor" id="frequencia">94%</div>
+            <div class="valor" id="frequencia"></div>
             </div>
             <div class="card nivel-card" id="nivelCard">
             <h3>Nível Atual</h3>
-            <div class="nivel-label" id="nivelLabel">🏅 Ouro</div>
+            <div class="nivel-label" id="nivelLabel"></div>
             </div>
         </div>
 
